1일 실습 문제 추가

--- a/01.md
+++ b/01.md
@@ -154,7 +154,7 @@ result = (+++) 1 2
 ## 타입 만들기
 
 ```haskell
-data Point = Point Double Double
+data Point = Point Double Double deriving (Show, Eq)
 
 value :: Point
 value = Point 1.0 1.0
@@ -163,6 +163,7 @@ value = Point 1.0 1.0
 * `data 타입이름 = 타입생성자이름 타입 타입 ...` 형식
 * 타입생성자로 값을 만들 수 있음 
 * `Point :: Double -> Double -> Point` 생성자 함수가 생김
+* `deriving (Show, Eq)`에 대해서는 다음 시간에 다룰 예정, 출력과 동등 비교를 위해 일단 붙이기
 
 ### 생성자 함수가 여러 개인 타입
 
@@ -170,7 +171,8 @@ value = Point 1.0 1.0
 data Shape
   = Rect Double Double
   | Circle Double
-
+  deriving (Show, Eq)
+  
 value1 :: Shape
 value1 = Rect 1.0 1.0
 
@@ -181,7 +183,7 @@ value2 = Circle 2.0
 ### 생성자 함수에 인자가 없는 타입
 
 ```haskell
-data Bool = True | False
+data Bool = True | False deriving (Show, Eq)
 ```
 
 ### 함수의 패턴 매칭과 디스트럭처링
@@ -227,6 +229,7 @@ result3 = area $ Rect 1.0 $ area $ Circle 2.0
 data Shape
   = Rect {width :: Double, height :: Double}
   | Circle {radius :: Double}
+  deriving (Show, Eq)
 
 rect = Rect 1.0 1.0
 
@@ -242,6 +245,20 @@ area (Circle r) = pi * r * r
 
 area :: Shape -> Double
 area Rect {width = w, height = h} = w * h
+area Circle {radius = r} = pi * r * r
+
+area :: Shape -> Double
+area (Rect _ 0) = 0
+area (Rect 0 _) = 0
+area (Rect w h) = w * h
+area (Circle 0) = 0
+area (Circle r) = pi * r * r
+
+area :: Shape -> Double
+area Rect {height = 0} = 0
+area Rect {width = 0} = 0
+area Rect {width = w, height = h} = w * h
+area Circle {radius = 0} = 0
 area Circle {radius = r} = pi * r * r
 ```
 
@@ -259,6 +276,7 @@ area circle@Circle {} = pi * radius circle * radius circle
 data Shape
   = Rect {rectWidth :: Double, rectHeight :: Double}
   | Circle {circleRadius :: Double}
+  deriving (Show, Eq)
 ```
 
 ### newtype
@@ -266,7 +284,7 @@ data Shape
 생성자 함수가 하나고 인자가 하나면 `data` 대신 `newtype` 키워드로 정의, 특별하게 사용할 수 있음
 
 ```haskell
-newtype Value = Value {unValue :: Int}
+newtype Value = Value {unValue :: Int} deriving (Show, Eq)
 ```
 
 ## 제어 구문
@@ -507,8 +525,9 @@ foldr (+) 0 [1 .. 4]
 
 ## 실습 문제
 
-* 모듈 만들기
-* Main.hs에서 모듈에 함수를 부르기
-* 리스트 처리하는 예제
-* 조건문 or 패턴 매칭
-* 타입을 만들기
+* 개발자, 디자이너, 매니저 생성자 함수를 갖는 Role 타입 만들기
+* name(문자열), role(Role), salary(숫자) 타입을 갖는 Person 레코드 만들기
+* `sumSalary :: [Person] -> Int` 함수 만들기 
+* 개발자인 경우 salary 1,000 보너스, 디자이너인 경우 500 보너스를 붙여서 `sumSalary`를 계산하도록 하기
+  * 보너스를 계산하는 함수를 패턴 매칭으로 따로 만들어 보기
+* Person을 모듈로 만들고 sumSalary와 Person, Role 등을 내보내서 Main에서 예제와 함게 sumSalary를 불러보기
