문제답추가

--- a/01.md
+++ b/01.md
@@ -24,6 +24,15 @@ main = do
   -}
   ```
 
+## VSCode에서 하스켈 코드를 바로 실행하기
+
+VScode에 주석 뒤에 `>>>`를 쓰고 뒤에 코드를 쓰면 VScode에서 하스켈 코드를 바로 실행해 볼 수 있다
+
+```haskell
+-- >>> 1 + 1
+-- 2
+```
+
 ## 기본 타입
 
 ### 숫자
@@ -531,3 +540,26 @@ foldr (+) 0 [1 .. 4]
 * 개발자인 경우 salary 1,000 보너스, 디자이너인 경우 500 보너스를 붙여서 `sumSalary`를 계산하도록 하기
   * 보너스를 계산하는 함수를 패턴 매칭으로 따로 만들어 보기
 * Person을 모듈로 만들고 sumSalary와 Person, Role 등을 내보내서 Main에서 예제와 함게 sumSalary를 불러보기
+
+```haskell
+data Role
+  = Developer
+  | Manager
+  | Designer
+  deriving (Show, Eq)
+
+data Person = Person
+  { name :: String,
+    role :: Role,
+    salary :: Int
+  }
+  deriving (Show, Eq)
+
+bonus :: Person -> Int
+bonus Person {role = Developer} = 1000
+bonus Person {role = Manager} = 0
+bonus Person {role = Designer} = 500
+
+sumSalary :: [Person] -> Int
+sumSalary = foldr (\p@Person {salary = s} acc -> acc + s + bonus p) 0
+```
