--- a/01.md
+++ b/01.md
@@ -12,7 +12,7 @@ main = do
 
 * 파일명과 모듈 이름
 * `이름 = 값`, `이름 :: 타입`, 순서는 관계 없음
-* 들여쓰기
+* 표현식 이후는 들여쓰기를 기반으로 한다. 포멧터 사용을 권장, ormolu 또는 stylish-haskell를 많이 사용
 * 타입 추론이 되기 때문에 타입 지정은 필수가 아님, 하지만 최상위 타입은 관행으로 지정
 * 주석
   ```haskell
@@ -50,6 +50,7 @@ value = 1.0
 value :: Float
 value = 1.0
 ```
+
 
 ### 문자
 ```haskell
@@ -217,6 +218,8 @@ result1 = area (Rect 1.0 1.0)
 result2 = area (Circle 2.0)
 ```
 
+만약 특정 생성자에 대한 패턴 매칭 구현이 없다면 런타임 에러가 난다.
+
 생성자 함수 이름으로 구현을 고르고 생성자 함수의 인자를 함수의 인자로 디스트럭처링해서 사용
 
 ### $ 구문
@@ -271,7 +274,8 @@ area Circle {radius = 0} = 0
 area Circle {radius = r} = pi * r * r
 ```
 
-필드명을 셀렉터 함수로 사용
+필드명을 셀렉터 함수로 사용, 예를 들어 `width` 필드는 전역적으로 `width :: Shape -> Double` 함수가 생긴다. 물론 
+`width`에는 `Rect` 값만 넘길 수 있다. Circle를 넘겨도 컴파일은 됨
 
 ```haskell
 area :: Shape -> Double
@@ -311,6 +315,16 @@ foo x =
 ### Bool 연산자
 
 비교를 위한 `>`, `<`, `==`, `>=`, `<=`, `/=`(다름), 조건 조합을 위한 `&&`, `||`
+
+소수의 특정한 정밀도 이상을 넘으면 동등비교에서 의미가 없어진다
+
+```haskell
+-- >>> 3.14159265358979 == 3.1415926535897932384626433832795028841971
+-- False
+
+-- >>> 3.141592653589793 == 3.1415926535897932384626433832795028841971
+-- True
+```
 
 ### `else if`
 
