세미그룹, 모노이드

--- a/02.md
+++ b/02.md
@@ -658,9 +658,44 @@ class Functor f => Applicative f where
 class Functor f where
   fmap :: (a -> b) -> f a -> f b
   ...
-``
+```
+
+## 세미그룹
+
+세미그룹은 효과와 직접적으로 관계는 없는 타입 클래스입니다. `Semigroup` 타입 클래스는 뭔가 합칠 수 있는 것들에 대한 추상입니다.
+대표적인 인스턴스로 리스트 타입이 있습니다. 
+
+```haskell
+class Semigroup m where
+  (<>) :: m -> m -> m
+  ...
+```
+
+`String`도 리스트이기 때문에 다음과 같이 합칠 수 있습니다.
+
+```haskell
+-- >>> "Hello" <> " " <> "World"
+-- "Hello World"
+```
 
 ## 모노이드
+
+모노이드는 세미그룹에 `mempty`가 있는 형태입니다. 세미그룹과 활용하여 `mempty`를 초기 값으로 활요할 수 있습니다
+
+```haskell
+class Semigroup m => Monoid m where
+  mempty :: m
+```
+
+리스트이 `mempty`는 `()` 빈 리스트입니다. 
+
+```haskell
+value :: [Int]
+value = mempty [1, 2, 3]
+
+-- >>> value
+-- []
+```
 
 ## Traverse
 
