--- a/02.md
+++ b/02.md
@@ -100,7 +100,7 @@ double = 2.0 + 3.0
 타입이 선언된 곳에서 인스턴스를 만들지 않아도 되기 때문에 확장성이 좋다. 사용하는 곳에서 인스턴스가 구현된 모듈을 import 하면
 된다. (* 인스턴스를 따로 export 할 필요는 없다)
 
-### 실습
+### 실습 1
 
 `Int`와 `Double`등 `Num` 타입 클래스의 인스턴스가 있다면 `1`을 증가시키는 `inc` 함수를 정의하고 구현하기, 힌트 타입 
 제약은 `(+)` 함수의 시그니처를 참고!
@@ -135,7 +135,7 @@ value :: MyValue
 value = value1 + value2
 ```
 
-### 실습
+### 실습 2
 
 `x`와 `y` 좌표를 갖는 `Point` 레코드 타입을 만들고 두 `Point`에 `(+)`를 사용할 수 있게 `Num` 인스턴스를 만들기
 더하는 방법은 `x` 값과 `y` 값을 각각 더하기
@@ -150,7 +150,7 @@ class 타입클래스이름 타입변수 where
   ...
 ```
 
-### 실습
+### 실습 3
 
 다음과 같은 `YesNo` 타입 클래스를 정의하고 `Int`, `Bool`, `리스트` 타입에 대해 각각 인스턴스를 만들기
 
@@ -197,7 +197,7 @@ class Show a where
   ...
 ```
 
-## 실습 
+## 실습 4
 
 위 `Point` 타입의 `Show` 타입 클래스를 만들어 `main` 함수에서 `print` 함수로 출력해보세요. 문자열은 `(++)` 함수로 합칠
 수 있다.
@@ -255,11 +255,11 @@ ViewPatterns
 
 ## 펑터와 타입 생성자
 
-### 실습
+### 실습 5
 
 `Null`이거나 `Int` 값을 같는 타입 `OptionalInt` 타입을 정의하기
 
-### 실습
+### 실습 6
 
 `OptionalInt` 두 개를 더 할 수 있게 `Num` 인스턴스를 만들고 `(+)` 함수로 더하기, 하나라도 `Null`이면 결과는 `Null`
 
@@ -274,13 +274,13 @@ data Optional a = Value a
 `Optional`은 타입이 아니고 타입 변수(`a`) 한 개를 받는 타입 생성자이다. `Optional Int`는 타입이다.
 (타입 레벨 관점에서 Kind는 `* -> *` 또는 `Type -> Type`, 뒤에서 다룰 예정)
 
-### 실습
+### 실습 7
 
 일반화 된 `Optional`의 `(+)` 인스턴스 만들기
 
 ### Optional 사용하기
 
-### 실습
+### 실습 8
 
 * 아래 `inc` 함수를 사용해서 `Optional a` 타입에 쓸 수 있는 `incOptional`를 구현하시오. `a`는 `Num` 인스턴스가 필요
   `Null` 값일 때는 결과가 `Null`
@@ -299,7 +299,7 @@ data Optional a = Value a
 
 ### 공통 기능의 일반화
 
-#### 실습 
+#### 실습 9
 
 `incOptional`와 `helloOptional`는 Optional로 감싸있는 값에 Null이 아닐 때만 일반 함수를 적용하는 공통 코드가 있다.
 이 코드를 일반화 한 `mapOptional` 함수를 구현해보자.
@@ -316,7 +316,7 @@ mapOptional :: (a -> b) -> Optional a -> Optional b
 실제 표기는 `[a]` 형태로 한다. 따라서 리스트 타입도 타입 변수가 하나 있는 타입 생성자이다.
 
 
-### 실습
+### 실습 10
 
 `mapOptional`은 타입 변수가 하나인 `Optional` 타입 생성자로 감싸있는 어떤 타입 `a`를 일반 함수를 적용해 `b`로 바꿀 수 
 있는 함수였다. 이때 값이 `Null`이면 결과가 `Null`인 효과가 있었다. 마찬가지로 타입 변수가 하나인 `[]` 타입 생성자로 감싸있는 
@@ -346,7 +346,7 @@ class Mapable f where
 이제 어떤 타입 생성자 `f`에 `Mapable` 인스턴스가 있다면 `amp`을 사용할 수 있다. `amap`은 `f`로 감싼 타입 `a`에 일반 함수
 를 적용해 `b`를 얻으면서 특별한 효과를 줄 수 있다. (Optional은 Null이 아닐 때만, []는 모든 항목에 적용)
 
-### 실습
+### 실습 11
 
 * `Optional` 타입 생성자의 `Mapable` 인스턴스를 만들기, 구현은 `mapOptional`과 같다.
 * `[]` 타입 생성자의 `Mapable` 인스턴스 만들기, 구현은 `mapList`와 같다.
@@ -449,7 +449,7 @@ ids = [("Todd", 32), ("Eunmin", 424)]
 튜플의 첫번째 항목을 키로 `lookup` 함수를 부르면 Maybe 두번째타입 형태로 나온다. 키에 연결된 값이 없다면 `Nothing` 값이
 나온다
 
-### 실습
+### 실습 12
 
 위에 `ids`에 들어 있는 값은 이름과 아이디 쌍이라고 하고 다음과 같이 아이디에 해당하는 나이가 있는 `ages` 데이터가 있다.
 
@@ -463,7 +463,7 @@ ages = [(32, 100), (42, 50)]
 
 ### 펑터의 한계
 
-위 실습에 펑터를 사용할 수 있을까?
+위 실습 12에 펑터를 사용할 수 있을까?
 
 ```haskell
 
@@ -542,7 +542,7 @@ class Monad m where
 -- Just 2
 ```
 
-### 실습
+### 실습 13
 
 다음 값들을 이용해서 모나드를 활용해 `id` 값에 `inc`를 적용해 나이를 가져오는 `getAge'` 함수를 만들어라
 
@@ -557,7 +557,7 @@ ages :: [(Int, Int)]
 ages = [(33, 100), (423, 50)]
 ```
 
-### 실습 
+### 실습 14
 
 리스트도 모나드 인스턴스가 있다. 모나드를 이용해 숫자를 입력 받아 모든 항목에 `inc`를 적용하고 다시 모든 항목에 `show`를 
 적용하는 `foo` 함수를 구현하라.
@@ -575,7 +575,7 @@ foo :: [Int] -> [String]
 ### 모나드 편의 문법
 
 모나드를 많이 쓰는 하스켈과 스칼라 언어에서는 모나드를 위한 문법 구문을 제공한다. 하스켈에서는 `do`, 스칼라에서는 `for`라고 한다.
-다음은 위 실습 예제를 `do` 구문으로 바꿔쓴 것이다.
+다음은 위 실습 14 예제를 `do` 구문으로 바꿔쓴 것이다.
 
 ```haskell
 getAge :: String -> Maybe Int
@@ -585,7 +585,18 @@ getAge name = do
   lookup id ages
 ```
 
-## 실습
+`do` 구문 안에서는 `let 이름 = 값`으로 중간 계산 결과에 이름을 붙일 수 있는 편리한 기능도 있습니다.
+
+```haskell
+getAge :: String -> Maybe Int
+getAge name = do
+  id <- lookup name ids
+  let result = inc id
+  id <- Just result -- 조금 억지스러운 예제이긴 합니다
+  lookup id ages
+```
+
+## 실습 15
 
 `ages`에서 아이디 두 개를 받아서 나이를 합치는 `sumAges` 함수를 작성하라
 
@@ -595,7 +606,7 @@ sumAges :: Int -> Int -> Maybe Int
 
 ## 어플리커티브
 
-위 실습에서 `sumAges`는 사실 앞의 계산과 뒤의 계산이 독립적이기 때문에 꼭 모나드를 쓸 필요가 없다. 이런 경우 어플리커티브
+위 실습 15에서 `sumAges`는 사실 앞의 계산과 뒤의 계산이 독립적이기 때문에 꼭 모나드를 쓸 필요가 없다. 이런 경우 어플리커티브
 펑터를 사용하면 좋다. 다음은 `Applicative` 타입 클래스에 있는 `apply`라고 부르는 함수다.
 
 ```haskell
@@ -680,11 +691,13 @@ class Semigroup m where
 
 ## 모노이드
 
-모노이드는 세미그룹에 `mempty`가 있는 형태입니다. 세미그룹과 활용하여 `mempty`를 초기 값으로 활요할 수 있습니다
+모노이드는 세미그룹에 `mempty`가 있는 형태입니다. 세미그룹과 활용하여 `mempty`를 초기 값으로 활요할 수 있습니다.
+`mappend`는 `(<>)`와 같지만 보통 `(<>)`를 많이 씁니다. 
 
 ```haskell
 class Semigroup m => Monoid m where
   mempty :: m
+  mappend :: a -> a -> a
 ```
 
 리스트이 `mempty`는 `()` 빈 리스트입니다. 
