--- a/02.md
+++ b/02.md
@@ -1,7 +1,5 @@
 # 하스켈 배움터 2일
 
-## 복습
-
 ## 프로젝트 만들기 (기본 템플릿인 hpack 버전)
 
 ```sh
@@ -711,6 +709,28 @@ value = mempty [1, 2, 3]
 ```
 
 ## Traverse
+
+다음 값이 있을 때,
+
+```haskell
+ids :: [(String, Int)]
+ids = [("John", 1), ("Jane", 2), ("Jim", 3)]
+
+names :: [String]
+names = ["John", "Jane", "Jim"]
+```
+
+다음 함수를 만들어라
+
+```haskell
+ages :: [Maybe Int]
+```
+
+그리고 다음 함수에 대해 생각해보시오.
+
+```haskell
+ages' :: Maybe [Int]
+```
 
 ## Reader 모나드
 
