--- a/03.md
+++ b/03.md
@@ -4,8 +4,8 @@
 
 ### 타입 생성자와 리스트
 
-리스트 타입인 `[]`도 사실 타입 생성자의 특별한 형태이다. `data List a = ...` 대신 `data [] a = ...`라고 볼 수 있고
-실제 표기는 `[a]` 형태로 한다. 따라서 리스트 타입도 타입 변수가 하나 있는 타입 생성자이다.
+리스트 타입인 `[]`도 사실 타입 생성자의 특별한 형태이다. `data List a = ...` 대신 `data [] a = ...`라고 볼 수 있고 
+표기는 `[a]` 형태로 할 수 있다. 따라서 리스트 타입도 타입 변수가 하나 있는 타입 생성자이다.
 
 
 ### 실습 10
@@ -25,18 +25,18 @@ mapList :: (a -> b) -> [a] -> [b]
 있을 것같다. 타입 변수가 하나인 타입 생성자를 변수화 시키면 다음과 같은 추상을 얻을 수 있다.
 
 ```haskell
-amap :: (a -> b) -> f a -> f b
+mapAll :: (a -> b) -> f a -> f b
 ```
 
 이 함수에 `f` 변수를 타입 클래스로 추상화 하면 다음과 같은 타입 클래스를 정의 할 수 있다.
 
 ```haskell
 class Mapable f where
-	amap :: (a -> b) -> f a -> f b 
+	mapAll :: (a -> b) -> f a -> f b 
 ```
 
-이제 어떤 타입 생성자 `f`에 `Mapable` 인스턴스가 있다면 `amp`을 사용할 수 있다. `amap`은 `f`로 감싼 타입 `a`에 일반 함수
-를 적용해 `b`를 얻으면서 특별한 효과를 줄 수 있다. (Optional은 Null이 아닐 때만, []는 모든 항목에 적용)
+이제 어떤 타입 생성자 `f`에 `Mapable` 인스턴스가 있다면 `mapAll`을 사용할 수 있다. `mapAll`은 `f`로 감싼 타입 `a`에 
+일반 함수를 적용해 `b`를 얻으면서 특별한 효과를 줄 수 있다. (Optional은 Null이 아닐 때만, []는 모든 항목에 적용)
 
 ### 실습 11
 
@@ -47,7 +47,10 @@ class Mapable f where
 
 `Int` 타입도 `Mapable` 인스턴스를 만들 수 있을까?
 
-### 진짜 펑터와 Maybe 타입
+### 펑터의 의미와 Maybe 타입
+
+펑터에서 `f a` 타입은 실제 값은 `a`이다. `f`는 효과를 위해 표시한 태그와 같다. `f`로 감싼 진짜 값인 `a`에 일반 함수를
+적용 + 효과를 위한 타입 클래스다.
 
 하스켈에서 `Mapable`과 같은 타입클래스를 `Functor`라고 한다. 다음과 같이 비슷하게 정의 되어 있다.
 
@@ -158,7 +161,6 @@ ages = [(32, 100), (42, 50)]
 위 실습 12에 펑터를 사용할 수 있을까?
 
 ```haskell
-
 getAge :: String -> Maybe Int
 getAge name = fmap (\id -> lookup id ages) (lookup name ids) -- 컴파일 에러!
 ```
@@ -277,14 +279,17 @@ getAge name = do
   lookup id ages
 ```
 
-`do` 구문 안에서는 `let 이름 = 값`으로 중간 계산 결과에 이름을 붙일 수 있는 편리한 기능도 있습니다.
+`do` 아래 순서대로 계산하는 여러 줄을 쓸 수 있다. `일반 값 <- 모나드 값` 형태로 모나드 값에서 일반 값을 꺼낸 형태로 왼쪽
+심볼에 바인딩해준다. 바인딩이 되면 아래서 심볼로 일반 값을 참조해 쓸 수 있다. `do`의 마지막 값은 모나드 값이어야 한다.
+
+`do` 구문 안에서는 `let 이름 = 값`으로 중간 계산 결과에 이름을 붙일 수 있는 편리한 기능도 있다.
 
 ```haskell
 getAge :: String -> Maybe Int
 getAge name = do
   id <- lookup name ids
   let result = inc id
-  id <- Just result -- 조금 억지스러운 예제이긴 합니다
+  id <- Just result -- 조금 억지스러운 예제
   lookup id ages
 ```
 
@@ -406,6 +411,8 @@ value = mempty [1, 2, 3]
 
 다음 값이 있을 때,
 
+### 실습 16
+
 ```haskell
 ids :: [(String, Int)]
 ids = [("John", 1), ("Jane", 2), ("Jim", 3)]
@@ -420,14 +427,214 @@ names = ["John", "Jane", "Jim"]
 ages :: [Maybe Int]
 ```
 
-그리고 다음 함수에 대해 생각해보시오.
+### 실습 17
+
+그리고 다음 함수에 만들어보시오.
 
 ```haskell
 ages' :: Maybe [Int]
 ```
 
-## Reader 모나드
+## 자주 쓰는 모나드
 
-## Writer 모나드
+모나드는 맥락 속에서 연속된 계산을 한다. `Maybe` 모나드인 경우 계산 중 결과가 `Nothing` 값이 나오면 다음 계산으로 이어지지
+않는 맥락을 갖는다. 자주 쓰는 다른 모나드를 보자.
 
-## State 모나드
+### Reader
+
+모나드 계산 중에 언제나 외부 값을 불러서 쓸 수 있는 효과가 있는 모나드 만들기
+
+#### 실습 18
+
+어떤 타입 `r`을 인자로 받고 어떤 다른 타입 `a`를 돌려주는 함수 값 `r -> a`를 갖는 `Config r a` 타입을 레코드 타입으로 
+정의하라.
+
+#### 실습 19
+실습 18에서 만든 `Config r a`에 효과를 만들 것이다. `r`은 외부 값, `a`가 진짜 값이라고 할때, `42`라는 진짜 값을
+갖는 `Config r a` 값을 만들고 진짜 값을 꺼내보자. `r`은 아무 값이나 넣어라.
+
+#### 실습 20
+앞에 실습에서 `r` 값을 사용하는 `Config r a` 값을 만들어보라.
+
+#### 실습 21
+
+다음과 같이 `Config` 타입에 펑터 인스턴스를 만들어 보자. `Config` 타입의 펑터는 일반 값인 `a`를 꺼내서 `f`를 적용하고
+다시 `Config`로 감싸주는 함수다. 인스턴스에 시그니처를 쓰기 위해 `{-# LANGUAGE InstanceSigs #-}` 언어 확장을 추가했다.
+
+```haskell
+instance Functor (Config r) where
+  fmap :: (a -> b) -> Config r a -> Config r b
+  fmap f x = undefined
+```
+
+#### 실습 22
+
+`Config Int String` 값을 만들고 펑터에 `<$>`를 이용해서 일반 함수 `("Hello " ++)`를 적용해 최종 결과인 `a` 값을
+꺼내보라.
+
+`Config`의 모나드 인스턴스를 만들어보자. 앞에서 본 것 처럼 모나드 인스턴스가 되려면 `Applicative` 인스턴스가 필요하다.
+다음은 `Config`의 `Applicative` 인스턴스다.
+
+```haskell
+instance Applicative (Config r) where
+  pure x = Config $ \_ -> x
+  (<*>) :: Config r (a -> b) -> Config r a -> Config r b
+  (<*>) (Config f) (Config x) = Config $ \r -> f r (x r)
+```
+
+다음은 `Applicative`를 사용하는 예이다.
+
+```haskell
+result2 :: Config Int String
+result2 = (++) <$> Config (\r -> show (r + 1)) <*> Config (\r -> show (r + 2))
+
+-- >>> runConfig result2 1
+-- "23"
+```
+
+펑터와 어플리커티브에서 `r` 값은 `Config` 안에 있는 계산에서만 쓸 수 있었다. 모나드는 계산 과정을 중첩할 수 있기 때문에 
+`Config`의 어떤 계산 과정에서도 `r` 값을 쓸 수 있을 것이다.
+
+#### 실습 23
+
+`Config`에 대한 모나드 인스턴스를 구현하라
+
+```haskell
+instance Monad (Config r) where
+  return = pure
+  (>>=) :: Config r a -> (a -> Config r b) -> Config r b
+  (>>=) = undefined
+```
+
+`Config` 모나드로 계산을 이어 붙이면 계산 과정 중 필요하다면 언제든 `r` 값을 쓸 수 있다.
+
+```haskell
+result3 :: Config Int String
+result3 = Config (\r -> 42) >>= \x -> Config (\r -> r) >>= \config -> pure $ "Result: " ++ show (x + config)
+
+-- >>> runConfig result3 1
+-- "Result: 43"
+```
+
+`do` 구문으로 쓰면 다음과 같다.
+
+```haskell
+result4 :: Config Int String
+result4 = do
+  x <- pure 42
+  config <- Config (\r -> r)
+  pure $ "Result: " ++ show (x + config)
+
+-- >>> runConfig result4 1
+-- "Result: 43"
+```
+
+하스켈에서는 이 `Config` 모나드의 구현을 `Reader`라고 한다.
+
+### 의존성 추가하기
+
+하스켈에서는 `Reader` 모나드가 `mtl` 또는 `transformers` 패키지에 구현되어 있다.
+의존성을 추가하기 위해 `package.yaml` 파일을 열어 `mtl` 패키지를 다음과 같이 추가한다.
+
+```yaml
+dependencies:
+- base >= 4.7 && < 5
+- mtl
+```
+
+패키지를 추가하고 VSCode에서 활성화 하려면 VScode를 재시작하거나 `Haskell: Restart LSP Server` 명령어로 `HLS`를
+재시작해주면 된다.
+
+`mtl` 패키지에 `Reader` 모나드는 `Control.Monad.Reader` 모듈에 있다.
+
+```haskell
+import Control.Monad.Reader (Reader, ask, runReader)
+```
+
+`Reader r a` 타입은 실습에서 만든 것처럼 `r` 타입을 `ask` 함수로 모나드 안에서 가져올 수 있다.
+
+```haskell
+example :: Reader Int String
+example = do
+  x <- ask
+  pure $ "Value: " ++ show x
+```
+
+### 실습 24
+
+다음 `app` 값을 Bool 타입의 `isDeveMode` 값을 전역 값 대신 `Reader` 모나드로 읽어오도록 코드를 고쳐라
+
+```haskell
+isDevMode = True
+
+app :: Int 
+app = 
+  result
+  where 
+    x = 40
+    y = if isDevMode then 0 else 2
+    result = x + y
+```
+
+### Writer
+
+`Reader`와 비슷하지만 맥락에 값을 기록 할 수 있는 `Write` 모나드가 있다. `tell` 함수로 기록 한다.
+
+```haskell
+import Control.Monad.Writer (Writer, tell, runWriter)
+
+app :: Writer [String] Int
+app = do
+    let x = 40
+    let y = 2
+    tell ["y=" ++ show y]
+    return $ x + y
+```
+
+기록 한 값은 `runWriter`를 했을 때 결과와 함께 나온다.
+
+```haskell
+-- >>> (result, logs) = runWriter app
+```
+
+### State
+
+`Reader`와 `Writer` 기능을 함께 갖고 있는 `State` 모나드가 있다. 모나드 안에서 상태가 있는 값을 흉내낼 수 있다.
+
+```haskell
+import Control.Monad.State (State, get, put, runState)
+
+app :: State Int Int
+app = do
+  let x = 40
+  value <- get
+  put $ value + 1
+  value <- get
+  put $ value + 1
+  value <- get
+  return $ x + value
+
+-- >>> (result, state) = runState app 0
+```
+
+### IO
+
+입출력을 담당하는 `IO`도 모나드이다. `IO` 모나드가 하는 일은 거의 없다. `IO`는 모나드 맥락에서 부수 효과를 모으는 역할을
+한다. 부수 효과를 모두 모아서 `IO` 맥락에 담아서 `main` 함수에 전달하면 `main` 함수는 부수 효과를 실제로 발생시키는 역할을 
+한다.
+
+```haskell
+import System.Environment (getArgs)
+
+app :: IO Int
+app = do
+  (x:_) <- getArgs -- 커맨드 라인 입력 값을 문자열 리스트로 가져오는 부수 효과를 모아 둔다.
+  let y = "Arg: " ++ x
+  _ <- print y -- 화면에 출력하는 부수효과를 모은다. print의 리턴 타입은 IO () 이다.
+  pure 0
+
+main :: IO () -- IO 모나드로 모은 모든 부수효과를 순서대로 처리한다
+main = do 
+  x <- app
+  print x -- x 값을 화면에 출력하는 부수 효과를 모은다
+```
