--- a/04.md
+++ b/04.md
@@ -370,9 +370,7 @@ main = do
 ```haskell
 newtype LoggingT m a = ...
 
-runLoggingT :: LoggingT m a -> (Loc -> LogSource -> LogLevel -> LogStr -> IO ()) -> m a
-
-defaultOutput :: Handle -> (Loc -> LogSource -> LogLevel -> LogStr -> IO ())
+runStdoutLoggingT :: LoggingT m a -> m a
 
 logInfoN :: Text -> m ()
 ``` 
@@ -380,14 +378,13 @@ logInfoN :: Text -> m ()
 ```haskell
 {-# LANGUAGE OverloadedStrings #-}
 
-import System.IO (stdout)
 import Data.Text (pack)
 
 stdout :: Handle
 
 -- >>> logInfoN $ "y: " <> pack (show y)
 
--- >>> runLoggingT app (defaultOption stdout)
+-- >>> runStdoutLoggingT app
 ```
 
 ### OverloadedStrings
@@ -484,10 +481,9 @@ main = do
 {-# LANGUAGE OverloadedStrings #-}
 
 import Control.Monad.IO.Class (MonadIO, liftIO)
-import Control.Monad.Logger (MonadLogger, defaultOutput, logInfoN, runLoggingT)
+import Control.Monad.Logger (MonadLogger, logInfoN, runStdoutLoggingT)
 import Control.Monad.Reader (MonadReader, ask, runReaderT)
 import Data.Text (pack)
-import System.IO (stdout)
 
 app :: (MonadReader Int m, MonadLogger m, MonadIO m) => m Int
 app = do
@@ -499,7 +495,7 @@ app = do
 main :: IO ()
 main = do
   let logger = runReaderT app 40
-  result <- runLoggingT logger (defaultOutput stdout)
+  result <- runStdoutLoggingT logger
   print result
 ```
 
