빼먹은 것 추가

--- a/05.md
+++ b/05.md
@@ -363,6 +363,10 @@ result = do
 
 * `createTask` 함수를 `ExceptT Text IO Task` 형태의 모나드로 리팩터링하기
 * `main`에서 샘플 데이터로 `createTask` 불러보기
+* `ULID` 값 만들기, `getULID :: IO ULID`
+   * https://hackage-content.haskell.org/package/ulid-0.3.3.0/docs/Data-ULID.html
+* `UTCTime` 값 만들기, `getCurrentTime :: IO UTCTime`
+  * https://hackage.haskell.org/package/time-1.14/docs/Data-Time-Clock.html#t:UTCTime
 * `stack run`으로 실행해보기
 
 ## 실습
