--- a/05.md
+++ b/05.md
@@ -273,6 +273,22 @@ book3 = book & #author . #name .~ "김은민"
   * 변경 시간 기본 값은 `Nothing`
   * 할 일 내용이 12자를 넘으면 Nothing을 리턴
 
+```haskell
+mkTask :: ULID -> Text -> UTCTime -> Maybe Task
+mkTask taskId content createdAt =
+  if length content > 12
+    then
+      Nothing
+    else
+      Just $
+        Task
+          { id = taskId,
+            content = content,
+            createdAt = createdAt,
+            completed = False,
+            updatedAt = Nothing
+          }
+```
 ## 실습
 
 * `Domain.Todo.UseCase` 모듈 만들기
