--- a/05.md
+++ b/05.md
@@ -295,6 +295,23 @@ mkTask taskId content createdAt =
 * `Task` 값을 만드는 `createTask` 함수 만들기 `Text` 인자를 받아서 `Task`를 돌려준다.
 * 만약 `Task`를 만들다가 실패하면 실패 한 내용을 `Text` 형태로 알려준다.
 
+```haskell
+module Domain.Todo.UseCase where
+
+import Data.Text (Text)
+import Data.Time (getCurrentTime)
+import Data.ULID (getULID)
+import Domain.Todo.Task (Task, mkTask)
+
+createTask :: Text -> IO (Either Text Task)
+createTask content = do
+  taskId <- getULID
+  now <- getCurrentTime
+  case mkTask taskId content now of
+    Nothing -> pure $ Left "Content is too long"
+    Just task -> pure $ Right task
+```
+
 ## ExceptT
 
 * EitherT 대신 ExceptT
