--- a/05.md
+++ b/05.md
@@ -402,53 +402,130 @@ result = do
   * https://hackage.haskell.org/package/time-1.14/docs/Data-Time-Clock.html#t:UTCTime
 * `stack run`으로 실행해보기
 
+```haskell
+module Domain.Todo.UseCase where
+
+import Control.Monad.Except (ExceptT, throwError)
+import Control.Monad.IO.Class (liftIO)
+import Data.Text (Text)
+import Data.Time (getCurrentTime)
+import Data.ULID (getULID)
+import Domain.Todo.Task (Task, mkTask)
+
+createTask :: Text -> ExceptT Text IO Task
+createTask content = do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  case mkTask taskId content now of
+    Nothing -> throwError "Content is too long"
+    Just task -> pure task
+```
+
+```haskell
+module Domain.Todo.UseCase where
+
+import Control.Monad.Except (runExceptT, throwError)
+import Control.Monad.IO.Class (liftIO)
+import Data.Text (Text)
+import Data.Time (getCurrentTime)
+import Data.ULID (getULID)
+import Domain.Todo.Task (Task, mkTask)
+
+createTask :: Text -> IO (Either Text Task)
+createTask content = runExceptT $ do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  case mkTask taskId content now of
+    Nothing -> throwError "Content is too long"
+    Just task -> pure task
+```
+
 ## 실습
 
 * `createTask` 함수 시그니처를 `mtl` 스타일로 바꾸기
 
-## 실습
-
-* `Domain.Todo.TaskRepo` 모듈 만들기
-* `save :: Task -> m Bool` 함수를 하나 갖는 `TaskRepo` 타입 클래스 정의하기
-* `createTask` 함수에서 `save`를 불러 `Task`를 저장하기
-
-## 실습
-
-* `createTask`를 실행할 수 있도록 `App` 타입을 만들고 임의의 `TaskRepo`, `save` 함수를 구현하기
-
-## TVar (STM)
-
-* `stm` 패키지에 `Control.Concurrent.STM.TVar`에 소프트웨어 트랜젝셔널 메모리가 구현되어 있다
-
 ```haskell
-import Control.Concurrent.STM (atomically)
-import Control.Concurrent.STM.TVar (newTVarIO, readTVarIO, writeTVar, modifyTVar, TVar)
+import Control.Error.Util ((??))
+import Control.Monad.Except (runExceptT)
+import Control.Monad.IO.Class (MonadIO, liftIO)
+import Data.Text (Text)
+import Data.Time (getCurrentTime)
+import Data.ULID (getULID)
+import Domain.Todo.Task (Task, mkTask)
 
-main :: IO ()
-main = do
-  tvar <- newTVarIO (0 :: Int)
-  x <- readTVarIO tvar
-  print x
-  atomically $ writeTVar tvar 1
-  atomically $ modifyTVar tvar (\x -> x + 41)
-  x <- readTVarIO tvar
-  print x
+createTask :: (MonadIO m) => Text -> m (Either Text Task)
+createTask content = runExceptT $ do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  mkTask taskId content now ?? "error!!!"
 ```
 
-## 실습 
+## 질문과 답변
 
-* 할 일을 STM에 저장하기 위해 `[(ULID, Task)]` 타입을 `Database` 별칭으로 지정했다.
-* 튜플의 앞에 있는 ULID는 `task.id` 값이다.
+### mtl 스타일에서 `(??)`를 쓸 수 없는 문제에 대해서
+
+* 다음과 같은 타입은 컴파일 에러가 납니다.
 
 ```haskell
-type Database = TVar [(ULID, Task)]
+data Point = Point Double Double
+
+value :: Double -> Double -> a
+value x y = Point x y
 ```
 
-* 할 일 데이터베이스를 STM으로 초기화 하는 `initDb :: IO Database` 함수를 만드시오
-* 할 일 데이터베이스에 할 일을 추가하는 `addTask :: Database -> Task -> IO ()`를 만들어라
-  * 리스트에 항목을 추가하기 `1 : [2,3] == [1,2,3]`
+* `value`는 아무 타입이나 돌려줄 수 있게 되어 있지만 사실 아무 타입이나 돌려주면 안되고 임의의 타입을 돌려줄 수 있어야합니다.
+* 이런 경우 컴파일러는 다음과 같은 에러 메시지를 돌려줍니다.
 
+```
+Couldn't match expected type ‘a’ with actual type ‘Point’
+  ‘a’ is a rigid type variable bound by
+```
 
-## 실습 
+* `value`의 타입 시그니처 상 다음 코드는 컴파일에 문제가 없습니다. 이 경우 `value`의 리턴 값이 `Int`로 추론하는데 문제가
+  없기 때문입니다.
 
-* 데이터베이스를 애플리케이션의 어디서든 읽을 수 있도록 `Reader` 모나드의 외부 값으로 만들기
+```haskell
+value3 :: Int
+value3 = value 2.0 3.0
+```
+
+결국 
+
+```haskell
+value :: Double -> Double -> a
+value x y = Point x y
+```
+
+의 문제는 컴파일 할 때 타입의 논리적 오류를 만들기 때문에 `Point x y`를 돌려줄 수 없습니다.
+
+`(??)`도 같은 문제가 있습니다. `(??)`는 다음과 같은 시그니처입니다.
+
+```haskell
+Maybe a -> e -> ExceptT e m a
+```
+
+다음 코드를 봅시다.
+
+```haskell
+createTask :: (MonadIO m, MonadError Text m) => Text -> m Task
+createTask content = do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  mkTask taskId content now ?? "error!!!"
+```
+
+`(??)`를 사용하면 무조건 `ExceptT` 타입이 리턴되는데 사실 `mtl`로 만든다면 사실 `m Task` 타입을 리턴해야합니다.
+따라서 `a`를 리턴해야하는 대신 `Point x y`를 쓸 수 없었던 것 처럼 `m`를 리턴해야 하는데 `ExceptT`를 쓸 수 없습니다.
+
+* 다음과 같이 `note` 함수로 `Maybe`를 `Either`로 바꾸고 `Either`를 `liftEither`로 `ExceptT`로 바꿔 쓸 수 있습니다.
+
+```haskell
+import Control.Error.Util (note)
+...
+
+createTask :: (MonadIO m, MonadError Text m) => Text -> m Task
+createTask content = do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  liftEither $ note "error!!!" $ mkTask taskId content now
+```
