--- a/05.md
+++ b/05.md
@@ -457,7 +457,7 @@ createTask :: (MonadIO m) => Text -> m (Either Text Task)
 createTask content = runExceptT $ do
   taskId <- liftIO getULID
   now <- liftIO getCurrentTime
-  mkTask taskId content now ?? "error!!!"
+  mkTask taskId content now ?? "Task content must be less than 12 characters"
 ```
 
 ## 질문과 답변
