--- a/06.md
+++ b/06.md
@@ -159,6 +159,16 @@ type Database = TVar [(ULID, Task)]
     addTask db task@(Task {id = taskId}) = undefined
     ```
 
+```haskell
+instance TaskRepo App where
+  save task@(Task {id = taskId}) = do
+    db <- liftIO $ newTVarIO [(taskId, task)]
+    liftIO $ atomically $ modifyTVar db (\tasks -> (taskId, task) : tasks)
+    tasks <- liftIO $ readTVarIO db
+    liftIO $ print tasks
+    pure True
+```
+
 ## 실습 
 
 * `TaskRepo`, `save` 함수를 고쳐서 빈 리스트로 TVar Database를 만들고 `addTask`를 불러 할 일을 STM에 추가해보자
