--- a/06.md
+++ b/06.md
@@ -113,6 +113,15 @@ main = do
 * 저장에 실패하면 적절한 에러 메시지를 돌려주기
 
 ```haskell
+createTask :: (MonadIO m, TaskRepo m) => Text -> m (Either Text Task)
+createTask content = runExceptT $ do
+  taskId <- liftIO getULID
+  now <- liftIO getCurrentTime
+  task <- mkTask taskId content now ?? "Task content must be less than 12 characters"
+  result <- lift $ TaskRepo.save task
+  if result
+    then pure task
+    else throwError "Task save failed"
 ```
 
 ## 실습
@@ -120,6 +129,17 @@ main = do
 * `Main`에서 `createTask`를 사용할 수 있도록 `App` 타입을 만들고 임의의 `TaskRepo`, `save` 함수를 구현하기
 
 ```haskell
+newtype App a
+  = App {unApp :: IO a}
+  deriving (Functor, Applicative, Monad, MonadIO)
+
+main :: IO ()
+main = do
+  result <- unApp $ TaskUseCase.createTask "Hello"
+  print result
+
+instance TaskRepo App where
+  save _ = pure True
 ```
 
 ## 하스켈에서 바꿀 수 있는 값: TVar (STM)
