--- a/07.md
+++ b/07.md
@@ -7,6 +7,7 @@
 ```yaml
 dependencies:
   ...
+  - relude
   - aeson
   - wai
   - http-types
@@ -15,6 +16,75 @@ dependencies:
 ```
 
 ## 코드 정리
+
+### relude 적용하기 
+
+* https://hackage.haskell.org/package/relude
+* `package.yaml` 언어 확장에 다음 추가
+  ```yaml
+  default-extensions:
+  ...
+  - NoImplicitPrelude
+  ```
+* 모든 파일에 `import Relude` 추가
+  * `show`는 이제 `String`을 리턴하지 않는다.
+  * `read`는 안전하지 않기 때문에 `readMaybe`를 쓴다.
+  * 자주 쓰는 모듈은 reexport 되어 있기 때문에 하지 않아도 된다.
+
+### 데이터베이스 코드 옮기기
+
+* `Infra.PgDatabase.Connection` 모듈로 데이터베이스 연결 해제 코드 옮김
+
+```haskell
+module Infra.PgDatabase.Connection where
+
+import Control.Exception (bracket)
+import Database.PostgreSQL.Simple
+import Relude
+
+withConnection :: (Connection -> IO ()) -> IO ()
+withConnection action = do
+  bracket
+    ( connect $
+        ConnectInfo
+          { connectHost = "localhost",
+            connectPort = 5432,
+            connectDatabase = "todoapp",
+            connectUser = "constacts",
+            connectPassword = ""
+          }
+    )
+    close
+    action
+```
+
+* `Infra.PgDatabase.Task` 모듈에 `Task` 데이터베이스 관련 코드 옮기기
+
+```haskell
+module Infra.PgDatabase.Task where
+
+import Data.ULID (ULID)
+import Database.PostgreSQL.Simple (Connection, FromRow, ToRow, execute)
+import Database.PostgreSQL.Simple.FromField (FromField (fromField))
+import Database.PostgreSQL.Simple.ToField (ToField (toField))
+import Domain.Todo.Task (Task)
+import Relude
+
+instance ToRow Task
+
+instance ToField ULID where
+  toField ulid = toField (show ulid :: Text)
+
+instance FromRow Task
+
+instance FromField ULID where
+  fromField f mbs = fromMaybe (error "ULID parse error") . readMaybe <$> fromField f mbs
+
+insertTask :: Connection -> Task -> IO Bool
+insertTask conn task = do
+  result <- execute conn "INSERT INTO tasks (id, content, completed, craeted_at, updated_at) VALUES (?, ?, ?, ?, ?)" task
+  pure $ result == 1
+```
 
 ## JSON
 
