--- a/07.md
+++ b/07.md
@@ -31,6 +31,9 @@ dependencies:
   * `read`는 안전하지 않기 때문에 `readMaybe`를 쓴다.
   * 자주 쓰는 모듈은 reexport 되어 있기 때문에 하지 않아도 된다.
 
+* 문자열 변환
+  * https://hackage.haskell.org/package/relude-1.2.2.0/docs/Relude-String.html
+
 ### 데이터베이스 코드 옮기기
 
 * `Infra.PgDatabase.Connection` 모듈로 데이터베이스 연결 해제 코드 옮김
@@ -288,14 +291,14 @@ main = scottyT 3000 id $ do
 
 ### 요청
 
-* 요청 경로
+* 요청 경로 `pathParam :: (Parsable a, MonadIO m) => Text -> ActionT m a`
 
 ```haskell
 main :: IO ()
 main = scottyT 3000 id $ do
   get "/foo/:baz" $ do
-    w <- pathParam "baz"
-    text $ "파라미터: " <> w
+    baz <- pathParam "baz"
+    text $ "파라미터: " <> baz
 ```
 
 * 요청 바디 `body :: MonadIO m => ActionT m ByteString`
@@ -305,19 +308,16 @@ main :: IO ()
 main = scottyT 3000 id $ do
   post "/foo" $ do
     reqBody <- body
-    text $ "파라미터: " <> w
-
+    text $ "파라미터: " <> decodeUtf8 reqBody
 ```
 
-* 요청 쿼리
-
-```haskell
+```sh
+curl -X POST http://localhost:3000/foo -d "hello"
 ```
 
-* 요청 헤더
-
-```haskell
-```
+* JSON body `jsonData :: (FromJSON a, MonadIO m) => ActionT m a`
+* 요청 쿼리 `queryParam :: (Parsable a, MonadIO m) => Text -> ActionT m a`
+* 요청 헤더 `header :: Monad m => Text -> ActionT m (Maybe Text)`
 
 ### 실습
 
