모니터링 관련 내용 추가

--- a/08.md
+++ b/08.md
@@ -205,5 +205,18 @@ $ stack path --local-install-root
 * 하스켈 고급 타입 기능 (GADT, Type Family)
 * RankNTypes
 * 하스켈 메타 프로그래밍
-* 성능 측정과 모니터링, 로깅
+* 성능 측정과 모니터링, 로깅 (ekg, wai-middleware-metrics, resource-pool 커스텀 구현)
+  ```haskell
+  main :: IO ()
+  main = do
+  withConnection $ \conn -> do
+    store <- serverMetricStore <$> forkServer "localhost" 8000
+    waiMetrics <- registerWaiMetrics store
+    scottyT 3000 (runner conn) $ do
+      middleware (metrics waiMetrics)
+      middleware logStdout
+
+      get "/tasks" $ html "Hello World"
+      post "/tasks" Task.createTask
+  ```
 * 배운 것은 3/10 정도, 하지만 4/10 정도면 현실 애플리케이션 개발을 할 수 있다.
