로깅 패키지 추가

--- a/08.md
+++ b/08.md
@@ -205,7 +205,7 @@ $ stack path --local-install-root
 * 하스켈 고급 타입 기능 (GADT, Type Family)
 * RankNTypes
 * 하스켈 메타 프로그래밍
-* 성능 측정과 모니터링, 로깅 (ekg, wai-middleware-metrics, resource-pool 커스텀 구현)
+* 성능 측정과 모니터링(ekg, wai-middleware-metrics, resource-pool 커스텀 구현), 로깅(wai-extra)
   ```haskell
   main :: IO ()
   main = do
